syntax = "proto3";

option java_package = "com.osc.session_proto";
option java_multiple_files = true;

message UserSessionRequest {
  string userId = 1;
  string device = 2;
}

message SessionStatusResponse {
  bool isSessionActive = 1;
}

service SessionService {
  rpc GetSessionStatus (UserSessionRequest) returns (SessionStatusResponse);
}
